// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<styled.div>
  <styled.div>
    15 zł
  </styled.div>
</styled.div>
`;

exports[`should render correctly with has discount 1`] = `
<styled.div>
  <styled.div>
    50 zł
  </styled.div>
  <styled.div
    hasDiscount={true}
  >
    15 zł
  </styled.div>
</styled.div>
`;
